--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -18,11 +18,14 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+  .animate-pulse-color {
+    animation: pulse-color 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
   }
 }
 
@@ -194,3 +197,11 @@ body {
   }
 }
 
+@keyframes pulse-color {
+  0%, 100% {
+    color: #EAB308; /* yellow-500 */
+  }
+  50% {
+    color: #86EFAC; /* green-300 */
+  }
+}
